--- a/quickstart-automate/cloudbuild.yaml
+++ b/quickstart-automate/cloudbuild.yaml
@@ -13,7 +13,12 @@
 # limitations under the License.
 
 # [START cloudbuild_quickstart_automate]
-steps:
-  - name: golang
-    args: ['go', 'run', 'quickstart-automate/main.go']
+#steps:
+#  - name: golang
+#    args: ['go', 'run', 'quickstart-automate/main.go']
 # [END cloudbuild_quickstart_automate]
+steps:
+- name: golang
+script: go run quickstart-automate/main.go
+options:
+    logging: CLOUD_LOGGING_ONLY
